ANN - model building

--- a/customer_Churn.ipynb
+++ b/customer_Churn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3SckkuunPqkbwQYv2Izg8",
+      "authorship_tag": "ABX9TyNDR4Oi7ffY4bAm81hLKqN/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,227 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "SknkCm6AIvys"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.preprocessing import LabelEncoder,OneHotEncoder,StandardScaler\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.model_selection import train_test_split"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf"
+      ],
+      "metadata": {
+        "id": "9dd_0cYtu_d9"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "g8puoTrswGHl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tf.__version__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "CKoGaz0ku_hI",
+        "outputId": "b3d41e9e-d326-4188-f36d-d491532f6372"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2.12.0'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## data preprocessing"
+      ],
+      "metadata": {
+        "id": "mL8FlPdZvx_j"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = pd.read_csv(\"/content/Churn_Modelling.csv\")\n",
+        "X = data.iloc[:,3:-1].values\n",
+        "y = data.iloc[:,-1].values"
+      ],
+      "metadata": {
+        "id": "AFDa-u0fu_kQ"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## encoding categorical data"
+      ],
+      "metadata": {
+        "id": "hLQns96zxYCy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### label encoding"
+      ],
+      "metadata": {
+        "id": "5dMFk8YmxiU2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "la = LabelEncoder()\n",
+        "X[:,2] = la.fit_transform(X[:,2])"
+      ],
+      "metadata": {
+        "id": "1_0gaYkZxh_M"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## One Hot Encoding"
+      ],
+      "metadata": {
+        "id": "HZZPnWpQzxqt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ct = ColumnTransformer(transformers=[('encoder',OneHotEncoder(),[1])],remainder='passthrough')\n",
+        "X = np.array(ct.fit_transform(X))"
+      ],
+      "metadata": {
+        "id": "aaun2kAsw2Uf"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## split data to train test"
+      ],
+      "metadata": {
+        "id": "hCYBkXq503K2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2,random_state=42)"
+      ],
+      "metadata": {
+        "id": "Zy08hi9fw2Xl"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## feature scaling"
+      ],
+      "metadata": {
+        "id": "QD1C1VoR1ldM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sc = StandardScaler()\n",
+        "X_train = sc.fit_transform(X_train)\n",
+        "X_test = sc.transform(X_test)"
+      ],
+      "metadata": {
+        "id": "AfYA9Z7Iw2Z_"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## building ANN"
+      ],
+      "metadata": {
+        "id": "VGVtMAjO2St6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3AoKssv4w2c2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zRbi0_biw2gV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "G4ETYXE9vwIs"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cft_HVO5vwMX"
+      },
+      "execution_count": 7,
+      "outputs": []
     }
   ]
 }
