--- a/customer_Churn.ipynb
+++ b/customer_Churn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNDR4Oi7ffY4bAm81hLKqN/",
+      "authorship_tag": "ABX9TyNWSUqD+WXZm/4HuYG72ZPt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 29,
       "metadata": {
         "id": "SknkCm6AIvys"
       },
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "9dd_0cYtu_d9"
       },
-      "execution_count": 6,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -71,9 +71,9 @@
           "height": 35
         },
         "id": "CKoGaz0ku_hI",
-        "outputId": "b3d41e9e-d326-4188-f36d-d491532f6372"
+        "outputId": "6fee598c-cb32-40c3-8a0b-c839b02b4f7b"
       },
-      "execution_count": 7,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -86,7 +86,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 31
         }
       ]
     },
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "AFDa-u0fu_kQ"
       },
-      "execution_count": 8,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
       "metadata": {
         "id": "1_0gaYkZxh_M"
       },
-      "execution_count": 16,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
       "metadata": {
         "id": "aaun2kAsw2Uf"
       },
-      "execution_count": 20,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -180,7 +180,7 @@
       "metadata": {
         "id": "Zy08hi9fw2Xl"
       },
-      "execution_count": 22,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -202,7 +202,7 @@
       "metadata": {
         "id": "AfYA9Z7Iw2Z_"
       },
-      "execution_count": 24,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -216,38 +216,325 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ann = tf.keras.models.Sequential()"
+      ],
       "metadata": {
         "id": "3AoKssv4w2c2"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ann.add(tf.keras.layers.Dense(units=6, activation='relu'))"
+      ],
       "metadata": {
         "id": "zRbi0_biw2gV"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ann.add(tf.keras.layers.Dense(units=6, activation='relu'))"
+      ],
       "metadata": {
         "id": "G4ETYXE9vwIs"
       },
-      "execution_count": 7,
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ann.add(tf.keras.layers.Dense(units=1, activation='sigmoid'))"
+      ],
+      "metadata": {
+        "id": "cft_HVO5vwMX"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## training ANN"
+      ],
+      "metadata": {
+        "id": "QL21bMzf6JZh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ann.compile(optimizer='adam',loss='binary_crossentropy',metrics=['accuracy'])"
+      ],
+      "metadata": {
+        "id": "4DOEzC9J6ADm"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ann.fit(X_train,y_train,batch_size=32,epochs=100)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WfuFtEUY6AGf",
+        "outputId": "65d706ac-aa13-4135-accb-4b948dfd2597"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/100\n",
+            "250/250 [==============================] - 2s 3ms/step - loss: 0.6075 - accuracy: 0.6560\n",
+            "Epoch 2/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 0.4615 - accuracy: 0.7945\n",
+            "Epoch 3/100\n",
+            "250/250 [==============================] - 2s 7ms/step - loss: 0.4391 - accuracy: 0.7974\n",
+            "Epoch 4/100\n",
+            "250/250 [==============================] - 1s 6ms/step - loss: 0.4257 - accuracy: 0.8171\n",
+            "Epoch 5/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.4146 - accuracy: 0.8227\n",
+            "Epoch 6/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.4005 - accuracy: 0.8288\n",
+            "Epoch 7/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3859 - accuracy: 0.8395\n",
+            "Epoch 8/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3757 - accuracy: 0.8454\n",
+            "Epoch 9/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3682 - accuracy: 0.8496\n",
+            "Epoch 10/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3633 - accuracy: 0.8500\n",
+            "Epoch 11/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3598 - accuracy: 0.8512\n",
+            "Epoch 12/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3567 - accuracy: 0.8535\n",
+            "Epoch 13/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3549 - accuracy: 0.8540\n",
+            "Epoch 14/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3530 - accuracy: 0.8551\n",
+            "Epoch 15/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3515 - accuracy: 0.8564\n",
+            "Epoch 16/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3500 - accuracy: 0.8570\n",
+            "Epoch 17/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3491 - accuracy: 0.8577\n",
+            "Epoch 18/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3479 - accuracy: 0.8580\n",
+            "Epoch 19/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3465 - accuracy: 0.8576\n",
+            "Epoch 20/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3454 - accuracy: 0.8599\n",
+            "Epoch 21/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3438 - accuracy: 0.8575\n",
+            "Epoch 22/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3431 - accuracy: 0.8605\n",
+            "Epoch 23/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3420 - accuracy: 0.8612\n",
+            "Epoch 24/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3413 - accuracy: 0.8596\n",
+            "Epoch 25/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3409 - accuracy: 0.8608\n",
+            "Epoch 26/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3402 - accuracy: 0.8602\n",
+            "Epoch 27/100\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 0.3396 - accuracy: 0.8626\n",
+            "Epoch 28/100\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 0.3395 - accuracy: 0.8605\n",
+            "Epoch 29/100\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 0.3385 - accuracy: 0.8621\n",
+            "Epoch 30/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 0.3385 - accuracy: 0.8618\n",
+            "Epoch 31/100\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 0.3379 - accuracy: 0.8616\n",
+            "Epoch 32/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3374 - accuracy: 0.8612\n",
+            "Epoch 33/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3373 - accuracy: 0.8624\n",
+            "Epoch 34/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3366 - accuracy: 0.8622\n",
+            "Epoch 35/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3371 - accuracy: 0.8621\n",
+            "Epoch 36/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3365 - accuracy: 0.8614\n",
+            "Epoch 37/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3362 - accuracy: 0.8627\n",
+            "Epoch 38/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3356 - accuracy: 0.8626\n",
+            "Epoch 39/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3359 - accuracy: 0.8609\n",
+            "Epoch 40/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3351 - accuracy: 0.8634\n",
+            "Epoch 41/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3354 - accuracy: 0.8622\n",
+            "Epoch 42/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3348 - accuracy: 0.8644\n",
+            "Epoch 43/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3347 - accuracy: 0.8640\n",
+            "Epoch 44/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3346 - accuracy: 0.8634\n",
+            "Epoch 45/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3342 - accuracy: 0.8637\n",
+            "Epoch 46/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3344 - accuracy: 0.8633\n",
+            "Epoch 47/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3341 - accuracy: 0.8644\n",
+            "Epoch 48/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3336 - accuracy: 0.8626\n",
+            "Epoch 49/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3340 - accuracy: 0.8627\n",
+            "Epoch 50/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3341 - accuracy: 0.8639\n",
+            "Epoch 51/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3340 - accuracy: 0.8648\n",
+            "Epoch 52/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3337 - accuracy: 0.8643\n",
+            "Epoch 53/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3332 - accuracy: 0.8648\n",
+            "Epoch 54/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3333 - accuracy: 0.8641\n",
+            "Epoch 55/100\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 0.3333 - accuracy: 0.8645\n",
+            "Epoch 56/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 0.3338 - accuracy: 0.8621\n",
+            "Epoch 57/100\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 0.3333 - accuracy: 0.8648\n",
+            "Epoch 58/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 0.3331 - accuracy: 0.8645\n",
+            "Epoch 59/100\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 0.3330 - accuracy: 0.8630\n",
+            "Epoch 60/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3328 - accuracy: 0.8631\n",
+            "Epoch 61/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3331 - accuracy: 0.8637\n",
+            "Epoch 62/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3330 - accuracy: 0.8650\n",
+            "Epoch 63/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3329 - accuracy: 0.8635\n",
+            "Epoch 64/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3329 - accuracy: 0.8625\n",
+            "Epoch 65/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3324 - accuracy: 0.8643\n",
+            "Epoch 66/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3325 - accuracy: 0.8641\n",
+            "Epoch 67/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3326 - accuracy: 0.8645\n",
+            "Epoch 68/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3328 - accuracy: 0.8645\n",
+            "Epoch 69/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3322 - accuracy: 0.8652\n",
+            "Epoch 70/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3321 - accuracy: 0.8645\n",
+            "Epoch 71/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3321 - accuracy: 0.8625\n",
+            "Epoch 72/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3325 - accuracy: 0.8634\n",
+            "Epoch 73/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3322 - accuracy: 0.8624\n",
+            "Epoch 74/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3317 - accuracy: 0.8654\n",
+            "Epoch 75/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3325 - accuracy: 0.8635\n",
+            "Epoch 76/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3319 - accuracy: 0.8631\n",
+            "Epoch 77/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3317 - accuracy: 0.8641\n",
+            "Epoch 78/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3321 - accuracy: 0.8659\n",
+            "Epoch 79/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3319 - accuracy: 0.8633\n",
+            "Epoch 80/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3316 - accuracy: 0.8650\n",
+            "Epoch 81/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3314 - accuracy: 0.8655\n",
+            "Epoch 82/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3319 - accuracy: 0.8644\n",
+            "Epoch 83/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 0.3309 - accuracy: 0.8634\n",
+            "Epoch 84/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 0.3315 - accuracy: 0.8641\n",
+            "Epoch 85/100\n",
+            "250/250 [==============================] - 2s 6ms/step - loss: 0.3313 - accuracy: 0.8645\n",
+            "Epoch 86/100\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 0.3315 - accuracy: 0.8634\n",
+            "Epoch 87/100\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 0.3314 - accuracy: 0.8637\n",
+            "Epoch 88/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3314 - accuracy: 0.8652\n",
+            "Epoch 89/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3311 - accuracy: 0.8641\n",
+            "Epoch 90/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3310 - accuracy: 0.8636\n",
+            "Epoch 91/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3311 - accuracy: 0.8633\n",
+            "Epoch 92/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3314 - accuracy: 0.8634\n",
+            "Epoch 93/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3309 - accuracy: 0.8644\n",
+            "Epoch 94/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3309 - accuracy: 0.8644\n",
+            "Epoch 95/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3314 - accuracy: 0.8656\n",
+            "Epoch 96/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3310 - accuracy: 0.8627\n",
+            "Epoch 97/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3311 - accuracy: 0.8635\n",
+            "Epoch 98/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3309 - accuracy: 0.8621\n",
+            "Epoch 99/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3308 - accuracy: 0.8644\n",
+            "Epoch 100/100\n",
+            "250/250 [==============================] - 0s 2ms/step - loss: 0.3313 - accuracy: 0.8629\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7a5d299fe9b0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## predicting the result"
+      ],
+      "metadata": {
+        "id": "CfD_Xa3s-6li"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Nal3l1SQ6AJX"
+      },
+      "execution_count": 41,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "cft_HVO5vwMX"
+        "id": "BMqbC7P06AM0"
       },
-      "execution_count": 7,
+      "execution_count": 41,
       "outputs": []
     }
   ]
