--- a/customer_Churn.ipynb
+++ b/customer_Churn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWSUqD+WXZm/4HuYG72ZPt",
+      "authorship_tag": "ABX9TyM8bzq3d2WOrLx1LeRCkrow",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 55,
       "metadata": {
         "id": "SknkCm6AIvys"
       },
@@ -39,7 +39,8 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn.preprocessing import LabelEncoder,OneHotEncoder,StandardScaler\n",
         "from sklearn.compose import ColumnTransformer\n",
-        "from sklearn.model_selection import train_test_split"
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import confusion_matrix, accuracy_score"
       ]
     },
     {
@@ -521,20 +522,139 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(ann.predict(sc.transform([[1,0,0,600,1,40,3,60000,2,1,1,50000]]))>0.5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nal3l1SQ6AJX",
+        "outputId": "45f0b95d-ad72-40ea-c3a4-b5271ccc04fa"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1/1 [==============================] - 0s 49ms/step\n",
+            "[[False]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = ann.predict(X_test)\n",
+        "y_pred = (y_pred>0.5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BMqbC7P06AM0",
+        "outputId": "371cae78-5285-4656-891d-ae4ba526b5b9"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "63/63 [==============================] - 0s 3ms/step\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## confusion matrix"
+      ],
+      "metadata": {
+        "id": "o4wxkxobNSHa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "confusion_matrix(y_test,y_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hlxLCOoQNRN4",
+        "outputId": "d0cf1d54-37ab-4184-9f80-df496f4796fc"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1589,   18],\n",
+              "       [ 309,   84]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "accuracy_score(y_test,y_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4kTmABm4NRQk",
+        "outputId": "d0029c66-fc2c-495b-ebdb-538054689670"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8365"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Nal3l1SQ6AJX"
+        "id": "EEQg5w5INRTK"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "BMqbC7P06AM0"
+        "id": "WkFeHuvONRWV"
       },
-      "execution_count": 41,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "K87dpa5ZNRZj"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
